tests/whiley/valid/test_1420.wyal
define f_ensures_0(int x, int r) is:
    r != 1


assert "postcondition not satisfied":
    forall(int x):
        if:
            x == 2
        then:
            f_ensures_0(x, 2)


