tests/whiley/invalid/test_93.wyal
define f_ensures_0(int r) is:
    (2 * r) == 1


assert "postcondition not satisfied":
    if:
        true
    then:
        f_ensures_0(1)


